--- a/index.html
+++ b/index.html
@@ -742,9 +742,7 @@
 		<div class="container">
 			<h2>Breadcrumb</h2>
 			<sgds-breadcrumb>
-				<sgds-breadcrumb-item>
-            <a href="#">Home</a>
-        </sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">Home</a></sgds-breadcrumb-item>
 				<sgds-breadcrumb-item>
             <a href="#">About</a>
         </sgds-breadcrumb-item>
@@ -752,6 +750,18 @@
             <a href="https://www.google.com/">Contacts</a>
         </sgds-breadcrumb-item>
 		
+			</sgds-breadcrumb>
+			<sgds-breadcrumb>
+				<sgds-breadcrumb-item>
+          <a href="#">Home</a>
+        </sgds-breadcrumb-item>
+				<sgds-breadcrumb-item>
+          <a href="#">About</a>
+        </sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">Contact</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">Info</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">Last</a></sgds-breadcrumb-item>
 			</sgds-breadcrumb>
 		</div>
 		<div class="container">
@@ -1474,8 +1484,7 @@
       <div class="row">
         <h2>Overflow</h2>
         <sgds-dropdown menuVariant="default">
-          <sgds-icon-button slot="toggler" variant="ghost" size="sm" role="button" variant=${this.variant}
-            ?disabled=${this.disabled} aria-expanded="${this.menuIsOpen}" aria-haspopup="menu">
+          <sgds-icon-button slot="toggler" variant="ghost" size="sm" role="button" aria-haspopup="menu">
             <sgds-icon name="three-dots"></sgds-icon>
           </sgds-icon-button>
           <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -1486,7 +1495,7 @@
                 d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z" />
             </svg>Option label</sgds-dropdown-item>
           <sgds-dropdown-item disabled>Option label</sgds-dropdown-item>
-          <sgds-dropdown-item>Option label</sgds-dropdown-item>
+          <sgds-dropdown-item href="https://www.google.com">Google</sgds-dropdown-item>
           <sgds-dropdown-item>Option label</sgds-dropdown-item>
           <sgds-dropdown-item>Option label</sgds-dropdown-item>
           <sgds-dropdown-item>Option label</sgds-dropdown-item>
