refactor(dropdown-item): let users pass in anchor as slots

--- a/index.html
+++ b/index.html
@@ -793,8 +793,10 @@
 				<sgds-breadcrumb-item>
           <a href="#">About</a>
         </sgds-breadcrumb-item>
-				<sgds-breadcrumb-item><a href="#">Contact</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="https://www.google.com">Contact</a></sgds-breadcrumb-item>
 				<sgds-breadcrumb-item><a href="#">Info</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
+				<sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
 				<sgds-breadcrumb-item><a href="#">More</a></sgds-breadcrumb-item>
 				<sgds-breadcrumb-item><a href="#">Last</a></sgds-breadcrumb-item>
 			</sgds-breadcrumb>
@@ -1544,7 +1546,21 @@
             Dropdown
             <sgds-icon name="chevron-down" slot="rightIcon"></sgds-icon>
           </sgds-button>
-          <sgds-dropdown-item active><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
+          <sgds-dropdown-item active>
+           sdfjhskfjhs ksljdhfskljdfh sdkljfhasdasdasdasdsadasdasd sdf 
+          </sgds-dropdown-item>
+          <sgds-dropdown-item>
+            <div href="#">Home</div>
+          </sgds-dropdown-item>
+          <sgds-dropdown-item active>
+            <a href="https://google.com" target="_blank"><sgds-icon name="placeholder"></sgds-icon>Option target blank</a>
+          </sgds-dropdown-item>
+          <sgds-dropdown-item disabled>
+            <a href="#"><sgds-icon name="placeholder"></sgds-icon>Option disabled</a>
+          </sgds-dropdown-item>
+          <sgds-dropdown-item >
+            <a href="#"><sgds-icon name="placeholder"></sgds-icon>Option label</a>
+          </sgds-dropdown-item>
           <sgds-dropdown-item disabled><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
           <sgds-dropdown-item><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
           <sgds-dropdown-item><sgds-icon name="placeholder"></sgds-icon>Option label</sgds-dropdown-item>
