refactor(*): remove scoped elements mixin and implement dependency registration

--- a/index.html
+++ b/index.html
@@ -130,6 +130,10 @@
     }
     scriptTarget.appendChild(moduleScript);
   </script>
+    <script type="module" src="src/components/Input/index.ts"></script>
+
+    <script type="module" src="src/components/Spinner/index.ts"></script>
+
   <script>
     const steps = [
       { title: 1, stepHeader: "Marker title", template: `<p>Step 1 Content</p>` },
