refactor(icon-button): review

--- a/index.html
+++ b/index.html
@@ -359,60 +359,35 @@
       <h2>Icon Button</h2>
       <div class="d-flex-row">
         <h3>Variants</h3>
-        <sgds-icon-button>
-          <sgds-icon name="placeholder"></sgds-icon>
+        <sgds-icon-button name="placeholder">
         </sgds-icon-button>
-        <sgds-icon-button variant="ghost">
-          <sgds-icon name="placeholder"></sgds-icon>
+        <sgds-icon-button variant="ghost" name="placeholder">
         </sgds-icon-button>
-        <sgds-icon-button variant="outline">
-          <sgds-icon name="placeholder"></sgds-icon>
+        <sgds-icon-button variant="outline" name="placeholder"> 
         </sgds-icon-button>
-        <sgds-icon-button variant="danger">
-          <sgds-icon name="placeholder"></sgds-icon>
+        <sgds-icon-button variant="danger" name="placeholder">
         </sgds-icon-button>
       </div>
       <div class="d-flex-row">
         <h3>Active</h3>
-        <sgds-icon-button active>
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button active variant="ghost">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button active variant="outline">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button active variant="danger">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
+        <sgds-icon-button active name="placeholder"></sgds-icon-button>
+        <sgds-icon-button active variant="ghost" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button active variant="outline" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button active variant="danger" name="placeholder"></sgds-icon-button>
+
       </div>
       <div class="d-flex-row">
         <h3>Disabled</h3>
-        <sgds-icon-button disabled>
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button disabled variant="ghost">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button disabled variant="outline">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button disabled variant="danger">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
+        <sgds-icon-button disabled name="placeholder"></sgds-icon-button>
+        <sgds-icon-button disabled variant="ghost" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button disabled variant="outline" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button disabled variant="danger" name="placeholder"></sgds-icon-button>
       </div>
       <div class="d-flex-row">
         <h3>Size</h3>
-        <sgds-icon-button size="sm">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button>
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
-        <sgds-icon-button size="lg">
-          <sgds-icon name="placeholder"></sgds-icon>
-        </sgds-icon-button>
+        <sgds-icon-button size="sm" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button size="md" name="placeholder"></sgds-icon-button>
+        <sgds-icon-button size="lg" name="placeholder"></sgds-icon-button>
       </div>
       <a href="#">light dom anchor</a>
       <a href="#" disabled>disabled light dom anchor</a>
