--- a/index.html
+++ b/index.html
@@ -643,6 +643,13 @@
         </sgds-stepper>
       </div>
       <div>
+        <h3>Icon Stepper</h3>
+        <sgds-stepper activeStep="1"
+          steps='[{"stepHeader":"Personal Details","component":"1 test", "iconName": "placeholder"},{"stepHeader":"Address and Contact Information","component":"2 test", "iconName": "placeholder"},{"stepHeader":"Review","component":"3 test", "iconName": "placeholder"}]'>
+
+        </sgds-stepper>
+      </div>
+      <div>
         <h3>Vertical Stepper</h3>
         <sgds-stepper id="myStepper" activeStep="1" clickable orientation="vertical"
           steps='[{"stepHeader":"Personal Details","component":"1 test"},{"stepHeader":"Address and Contact Information","component":"2 test"},{"stepHeader":"Review","component":"3 test"}]'>
