--- a/index.html
+++ b/index.html
@@ -751,6 +751,7 @@
       <br />
     </div>
     <div class="container">
+      <h2>ComboBox</h2>
       <sgds-combo-box menuList='["John Smith", "Jack Adams"]' label="label" hintText="hint" hasFeedback="true"
         invalidFeedback="test">
         <svg slot="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
