chore(*): update index.html

--- a/index.html
+++ b/index.html
@@ -145,17 +145,16 @@
 <body class="d-flex flex-column min-vh-100"></body>
 <sgds-masthead></sgds-masthead>
 <sgds-mainnav expand="lg">
-  <span slot="brand">Design System</span>
   <img width="130" src="https://www.designsystem.tech.gov.sg/assets/img/logo-sgds.svg" slot="brand">
 
   <sgds-mainnav-item active href="#">
-    <strong>Home</strong>
+    Home
   </sgds-mainnav-item>
   <sgds-mainnav-item disabled href="#">About</sgds-mainnav-item>
   <sgds-mainnav-item href="#" slot="end" class="test test2">Info</sgds-mainnav-item>
-  <sgds-mainnav-item slot="end" id="night-theme"><i class="bi bi-moon"></i></sgds-mainnav-item>
+  <sgds-mainnav-item href="#" slot="end" id="night-theme"><i class="bi bi-moon"></i></sgds-mainnav-item>
   <sgds-mainnav-dropdown disabled>
-    <strong slot="toggler">Dropdown</strong>
+    <span slot="toggler">Dropdown</span>
     <sgds-dropdown-item href="#">Item 1</sgds-dropdown-item>
     <sgds-dropdown-item href="#">Item 2</sgds-dropdown-item>
     <sgds-dropdown-item href="#">Item 3</sgds-dropdown-item>
@@ -1575,8 +1574,7 @@
         </sgds-overflow-menu>
 
         <sgds-dropdown menuVariant="default">
-          <sgds-icon-button slot="toggler" variant="ghost" size="sm" role="button" aria-haspopup="menu">
-            <sgds-icon name="three-dots"></sgds-icon>
+          <sgds-icon-button slot="toggler" name="three-dots" variant="ghost" size="sm" role="button" aria-haspopup="menu">
           </sgds-icon-button>
           <sgds-dropdown-item active><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-upload" viewBox="0 0 16 16">
@@ -1964,7 +1962,7 @@
         // qT.disabled = false;
       });
       enabltT.addEventListener("click", () => {
-        const qT = document.querySelector("sgds-textarea");
+        const qT = document.querySelector("sgds-checkbox");
         qT.disabled = false;
         // qT.disabled = false;
       });
