refactor(close-button): use sgds-icon

--- a/index.html
+++ b/index.html
@@ -1152,6 +1152,8 @@
       <h2>Close Button</h2>
       <div class="row">
         <sgds-close-button></sgds-close-button>
+        <sgds-close-button variant="light"></sgds-close-button>
+        <sgds-close-button variant="dark"></sgds-close-button>
         <sgds-close-button size="sm"></sgds-close-button>
       </div>
     </div>
