docs(breadcrumb, modal, icon-button): storybook

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <div class="d-flex-row">
         <sgds-icon-list size="sm">
           <div role="listitem">
-            <sgds-icon name="placeholder" size="sm"></sgds-icon>item one
+            <sgds-icon size="sm" name="placeholder"></sgds-icon>item one
           </div>
           <div role="listitem">
             <sgds-icon name="placeholder" size="sm"></sgds-icon>item one
@@ -1159,7 +1159,7 @@
     <div class="container">
       <h2>Modal</h2>
       <sgds-button id="modalShowButton">Open Modal</sgds-button>
-      <sgds-modal size="fullscreen">
+      <sgds-modal>
         <h2 slot="title">Modal title</h2>
         <p slot="description">Modal description</p>
         <p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum est vitae erat molestie blandit. Pellentesque at nunc at mi auctor imperdiet eu at leo. Integer aliquam, turpis vel ultricies ornare, sem massa commodo velit, pretium dictum quam nibh et ex. Suspendisse eu dignissim libero. Donec aliquam, lacus eu pellentesque interdum, arcu nisl blandit turpis, at tincidunt purus orci ut dolor. Morbi malesuada faucibus lorem, ornare accumsan sapien lacinia vel. In enim justo, hendrerit eu mi vitae, viverra fringilla nunc. Proin semper nunc a mollis faucibus. Nam at arcu non justo congue tincidunt. Donec vehicula felis risus, et lobortis lacus fringilla eu. Proin faucibus, nisi non semper elementum, sapien nisi viverra urna, id tempus augue felis ac nibh. Nullam pulvinar magna eros. Vestibulum at orci elit. Sed convallis fermentum gravida.
