docs(description-list, tab): storybook docs

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
       </sgds-table>
     </div>
     <div class="container">
-      <sgds-tab-group variant="tabs-info-toggle">
+      <sgds-tab-group>
         <sgds-tab slot="nav" panel="apple">
           <sgds-icon slot="icon" name="map"></sgds-icon>
           <span slot="count">1</span>
@@ -489,7 +489,7 @@
         <sgds-tab-panel name="banana">Banana</sgds-tab-panel>
         <sgds-tab-panel name="carrot">Carrot</sgds-tab-panel>
       </sgds-tab-group>
-      <sgds-tab-group variant="tabs-basic-toggle">
+      <sgds-tab-group>
         <sgds-tab slot="nav" panel="12">
           <sgds-icon slot="icon" name="map"></sgds-icon>
           <span>12</span>
