chore(*): trying out theming box

--- a/cypress/apps/angular-app/src/index.html
+++ b/cypress/apps/angular-app/src/index.html
@@ -5,7 +5,9 @@
   <title>Angular App</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@v2.0.0-rc.1/Masthead/index.umd.js"></script>
+  <link href='https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@3.0.0-rc.4/themes/day.css' rel='stylesheet'
+  type='text/css' />
+<script src="https://cdn.jsdelivr.net/npm/@govtechsg/sgds-web-component@3.0.0-rc.4"></script>
 
 </head>
 <body>
