style(pagination): add new variants and navigation stylings

--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,30 @@
       <h3>ellipsisOn, limit 7, ellipsisJump 3</h3>
       <sgds-table id="tablesample2"></sgds-table>
       <sgds-pagination id="samplepage2" directionVariant="icon" limit="3" currentPage="3" ellipsisOn></sgds-pagination>
+      <h2>Pagination</h2>
+      <p>size=sm,variant=default</p>
+      <sgds-pagination size="sm" variant="default" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>size=sm,variant=number</p>
+      <sgds-pagination size="sm" variant="number" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>size=sm,variant=description</p>
+      <sgds-pagination size="sm" variant="description" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>size=sm,variant=button</p>
+      <sgds-pagination size="sm" variant="button" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>size=sm,variant=default</p>
+      <sgds-pagination size="sm" variant="default" navigation="button" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+
+      <p>variant=number</p>
+      <sgds-pagination variant="number" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>variant=default</p>
+      <sgds-pagination variant="default" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>variant=description</p>
+      <sgds-pagination variant="description" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>variant=button</p>
+      <sgds-pagination variant="button" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>navigation=icon-button</p>
+      <sgds-pagination navigation="icon-button" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
+      <p>navigation=button</p>
+      <sgds-pagination navigation="button" dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
 
       <p>ellipsisOn=false</p>
       <sgds-pagination dataLength="15" limit="3" itemsPerPage="1" currentPage="6"></sgds-pagination>
