style(sidenav): wip

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
   
       </sgds-sidenav-item>
     </sgds-sidenav-item>
-    <sgds-sidenav-item title="Test title 2" disabled>
+    <sgds-sidenav-item title="Test title 2" >
       <span slot="title">
         <sl-icon name="stack"></sl-icon> Title
       </span>
