--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     }
 
     sgds-sidenav {
-      grid-area: sidenav;
+     grid-area: sidenav;
     }
 
     sgds-mainnav {
@@ -159,34 +159,51 @@
   </dev-console-widget>
 </sgds-mainnav>
 <div class="grid-preview">
-  <sgds-sidenav class="mt-3" id="test-id">
-    <sgds-sidenav-item active>
+  <sgds-sidenav-item active> <div slot="title">standalone</div></sgds-sidenav-item>
+  <sgds-sidenav class="mt-3" id="test-id" >
+    <sgds-sidenav-item>
       <span slot="title">
         Title
       </span>
-      <sgds-sidenav-link href="#" active>first-test</sgds-sidenav-link>
-      <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-      <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-      <sgds-sidenav-item title="Test title 2">
+      <sgds-sidenav-link disabled>
+        <a href="#"> disbaED-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-link>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-item title="Test title 2" >
+        <sgds-icon name="placeholder" slot="icon"></sgds-icon>
         <span slot="title">
-          <sl-icon name="stack"></sl-icon> Title
+           Title level 2 very long so just wrap
         </span>
-        <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-        <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-        <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
+        <sgds-sidenav-link active>
+          <a href="#"> first-test</a>
+        </sgds-sidenav-link>
+        <sgds-sidenav-link>
+          <a href="#"> first-test</a>
+        </sgds-sidenav-link>
   
       </sgds-sidenav-item>
-    </sgds-sidenav-item>
-    <sgds-sidenav-item title="Test title 2" >
+      </sgds-sidenav-item>
+        <sgds-sidenav-item title="Test title 2" >
+          <sgds-icon slot="icon" name="placeholder"></sgds-icon>
       <span slot="title">
-        <sl-icon name="stack"></sl-icon> Title
+         Title
       </span>
-      <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-      <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
-      <sgds-sidenav-link href="#">first-test</sgds-sidenav-link>
+      <sgds-sidenav-link>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
+      <sgds-sidenav-link>
+        <a href="#"> first-test</a>
+      </sgds-sidenav-link>
 
     </sgds-sidenav-item>
     <sgds-sidenav-item href="#">
+      <span slot="title">
+        <sl-icon name="stack"></sl-icon> Title 3
+      </span>
+    </sgds-sidenav-item>
+    <sgds-sidenav-item href="#" disabled>
       <span slot="title">
         <sl-icon name="stack"></sl-icon> Title 3
       </span>
@@ -994,7 +1011,7 @@
           <sgds-icon slot="validIcon" size="md" name="placeholder"></sgds-icon>
           <sgds-icon slot="invalidIcon" size="md" name="placeholder"></sgds-icon>
         </sgds-file-upload>
-        <sgds-input label="Label" hinttext="type hello" name="email" required hasFeedback="both" icon='<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+        <sgds-input pattern="hello" label="Label" hinttext="type hello" name="email" required hasFeedback="both" icon='<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
 												<path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
 												</svg>' placeholder="Placeholder" minlength="3" valid>
           <sgds-icon slot="icon" name="placeholder"></sgds-icon>
